--- a/templates/catalogue.html
+++ b/templates/catalogue.html
@@ -1,7 +1,31 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block extra_head %}
+    <style>
+        body {
+            background-image: url("{% static 'images/background-catalogue.png' %}");
+            background-repeat: repeat;
+            background-position: center top;
+        }
+    </style>
+{% endblock %}
 {% block content %}
-    <div class="container ps-4 m-0">
-    <h1 class="page-header">{{ brand }} > {{ model }} > {{ vehicle }}</h1>
+    <div class="container-fluid m-0 p-0 p-md-4">
+        <div class="row my-4 my-md-5 ms-4 g-0">
+            <h1 class="page-header fw-bolder text-danger m-0">{{ brand }} {{ model }}</h1>
+            <h1 class="page-header fs-4 text-white">{{ vehicle }}</h1>
+        </div>
+        {% for title, items in products %}
+            {% if items|length != 0 %}
+                <div class="px-2 px-md-4 py-2 justify-content-center align-items-center bg-dark rounded-4 mb-5">
+                    <p class="text-white fw-bolder fs-3 m-2">{{ title }}</p>
+                    {% for item in items %}
+                        {% include "product_card.html" with item=item %}
+                    {% empty %}
+                        <p class="text-white-50">No {{ title|lower }} available.</p>
+                    {% endfor %}
+                </div>
+            {% endif %}
+        {% endfor %}
     </div>
 {% endblock %}
