--- a/templates/base.html
+++ b/templates/base.html
@@ -68,9 +68,9 @@
 
 {% block content %}{% endblock %}
 
-<div class="container-fluid bg-dark p-5" id="contact" style="height: 80vh">
-    <h1 class="text-center text-white">Contact</h1>
-</div>
+{#<div class="container-fluid bg-dark p-5" id="contact">#}
+{#    <h1 class="text-center text-white">Contact</h1>#}
+{#</div>#}
 
 {% block extra_scripts %}{% endblock %}
 </body>
