--- a/templates/catalogue.html
+++ b/templates/catalogue.html
@@ -1,5 +1,6 @@
 {% extends 'base.html' %}
 {% load static %}
+{% block title %}{{ brand }} {{ model }}{% endblock %}
 {% block extra_head %}
     <style>
         body {
