--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}Brake Shop{% endblock %}
 {% block extra_head %}
     <style>
         /* icon that takes the parent color */
